confs-kub/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-gateway
  labels:
    app: quotes-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-gateway
  template:
    metadata:
      labels:
        app: quotes-gateway
    spec:
      containers:
      - name: quotes-gateway
        image: bastienbrunet/tp-microservices-b3-gateway
        ports:
        - containerPort: 9966
