confs-kub/mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
           claimName: mariadb
      containers:
      - name: mariadb
        image: mariadb
        volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
