confs-kub/opinions.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-opinions
  labels:
    app: quotes-opinions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-opinions
  template:
    metadata:
      labels:
        app: quotes-opinions
    spec:
      containers:
      - name: quotes-opinions
        image: bastienbrunet/tp-microservices-b3-opinions
        ports:
        - containerPort: 8081
