confs-kub/quotes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-quotes
  labels:
    app: quotes-quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-quotes
  template:
    metadata:
      labels:
        app: quotes-quotes
    spec:
      containers:
      - name: quotes-quotes
        image: bastienbrunet/tp-microservices-b3-quotes
        ports:
        - containerPort: 8080
