confs-kub/users.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-users
  labels:
    app: quotes-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-users
  template:
    metadata:
      labels:
        app: quotes-users
    spec:
      containers:
      - name: quotes-users
        image: bastienbrunet/tp-microservices-b3-users
        ports:
        - containerPort: 8082
